argocd/k8s/game-2048.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
spec: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: game-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: game-2048
  template:
    metadata:
      labels:
        app.kubernetes.io/name: game-2048
    spec:
      containers:
        - image: public.ecr.aws/l6m2t8p7/docker-2048
          name: game-2048
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: game-2048
  namespace: game-2048
  annotations:
    external-dns.alpha.kubernetes.io/hostname: game-2048.stilo.ca
spec:
  selector:
    app.kubernetes.io/name: game-2048
  ports:
  - name: http
    targetPort: 80
    port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: game-2048
  namespace: game-2048
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`game-2048.stilo.ca`)
      kind: Rule
      services:
        - name: game-2048
          port: 80
      # middlewares:
      #   - name: default-headers
  tls: {}  # Enable TLS
