argocd/k8s/niginx-test-internal.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: internal
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        environment: dev
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
            name: http

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: internal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx
  ports:
  - name: http
    targetPort: 80
    port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: internal
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/hostname: "nginx-internal.stilo.ca"
    external-dns.alpha.kubernetes.io/target: traefik-internal.stilo.ca
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`nginx-internal.stilo.ca`)  
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
  tls: {}

---
apiVersion: traefik.io/v1alpha1 # traefik.io/v1alpha1 depreciated in Traefik v3
kind: Middleware
metadata:
  name: default-headers
  namespace: internal
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    referrerPolicy: no-referrer
    contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https: data:; connect-src 'self' https:; frame-src 'self' https:; media-src 'self' https:; object-src 'none'; frame-ancestors 'self'; base-uri 'self'; form-action 'self';"
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
