argocd/k8s/niginx-test.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-test
spec: {}

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: nginx-test
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
            name: http

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-test
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nginx.stilo.ca
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
  - name: http
    targetPort: 80
    port: 80



# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: nginx
#   namespace: nginx-test
#   annotations: 
#     kubernetes.io/ingress.class: traefik-external
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`nginx.stilo.ca`)
#       kind: Rule
#       services:
#         - name: nginx
#           port: 80
#       # middlewares:
#       #   - name: default-headers
#   tls: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
  namespace: nginx-test
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  tls:
  - hosts:
    - nginx.stilo.ca
  rules:
  - host: nginx.stilo.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
